--- a/src/main/resources/fxml/PCGUI.fxml
+++ b/src/main/resources/fxml/PCGUI.fxml
@@ -267,16 +267,16 @@
                                        <children>
                                           <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                              <children>
-                                                <AnchorPane VBox.vgrow="ALWAYS">
+                                                <AnchorPane VBox.vgrow="NEVER">
                                                    <children>
                                                       <ComboBox fx:id="searchComboBox" editable="true" maxWidth="1.7976931348623157E308" onKeyPressed="#handleSearchComboBox" promptText="Введите название товара" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                                    </children>
                                                 </AnchorPane>
-                                                <AnchorPane>
+                                                <AnchorPane VBox.vgrow="ALWAYS">
                                                    <children>
-                                                      <StackPane fx:id="stackPane" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
+                                                      <StackPane fx:id="stackPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                                                          <children>
-                                                            <TreeView fx:id="categoriesTree" onMouseClicked="#handleCategoryTreeMouseClicked" prefHeight="230.0">
+                                                            <TreeView fx:id="categoriesTree" onMouseClicked="#handleCategoryTreeMouseClicked">
                                                                <opaqueInsets>
                                                                   <Insets left="5.0" />
                                                                </opaqueInsets>
@@ -286,36 +286,6 @@
                                                             </TreeView>
                                                          </children>
                                                       </StackPane>
-                                                   </children>
-                                                </AnchorPane>
-                                                <AnchorPane>
-                                                   <children>
-                                                      <TableView fx:id="vendorsTable" onMousePressed="#handleVendorsTableMousePressed" prefHeight="230.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                                        <columns>
-                                                          <TableColumn fx:id="vendorsTitleColumn" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" text="Производитель" />
-                                                          <TableColumn fx:id="vendorsAddressColumn" minWidth="70.0" text="Страна" />
-                                                            <TableColumn fx:id="vendorsRateColumn" minWidth="55.0" prefWidth="60.0" text="Наценка" visible="false" />
-                                                        </columns>
-                                                         <columnResizePolicy>
-                                                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                                         </columnResizePolicy>
-                                                         <contextMenu>
-                                                            <ContextMenu fx:id="vendorsTableContextMenu" />
-                                                         </contextMenu>
-                                                      </TableView>
-                                                   </children>
-                                                </AnchorPane>
-                                                <AnchorPane prefHeight="200.0" prefWidth="200.0">
-                                                   <children>
-                                                      <TableView fx:id="seriesTable" onMousePressed="#handleSeriesTableMousePressed" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
-                                                        <columns>
-                                                          <TableColumn fx:id="serieTableColumn" prefWidth="192.0" text="Серия" />
-                                                          <TableColumn fx:id="serieVendorTableColumn" prefWidth="183.0" text="Производитель" />
-                                                        </columns>
-                                                         <contextMenu>
-                                                            <ContextMenu fx:id="seriesTableContextMenu" />
-                                                         </contextMenu>
-                                                      </TableView>
                                                    </children>
                                                 </AnchorPane>
                                              </children>
@@ -396,7 +366,7 @@
                                                          <children>
                                                             <AnchorPane>
                                                                <children>
-                                                                  <Label layoutX="113.0" layoutY="29.0" text="Характеристики:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                                  <Label layoutX="113.0" layoutY="29.0" text="Наборы свойств:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                                      <font>
                                                                         <Font name="System Bold" size="14.0" />
                                                                      </font>
@@ -969,27 +939,6 @@
                            </children></AnchorPane>
                   </content>
                 </Tab>
-                  <Tab text="Браузер">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <children>
-                                    <AnchorPane>
-                                       <children>
-                                          <TextField fx:id="siteUrlTextField" onAction="#saveSiteUrlToDb" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
-                                       </children>
-                                    </AnchorPane>
-                                    <AnchorPane>
-                                       <children>
-                                          <WebView fx:id="tabBrowserWebView" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                       </children>
-                                    </AnchorPane>
-                                 </children>
-                              </VBox>
-                           </children></AnchorPane>
-                    </content>
-                  </Tab>
                   <Tab fx:id="settingsTab" text="Настройки">
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
@@ -1302,7 +1251,7 @@
                                                                                  <children>
                                                                                     <AnchorPane>
                                                                                        <children>
-                                                                                          <Label text="Набор характеристик:" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                                                          <Label text="Наборы свойств:" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                                                                        </children>
                                                                                     </AnchorPane>
                                                                                     <AnchorPane>
