add properties values to product and fix add/delete product context menu functioning

--- a/src/main/resources/fxml/PCGUI.fxml
+++ b/src/main/resources/fxml/PCGUI.fxml
@@ -366,8 +366,7 @@
                                           <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0">
                                             <columnConstraints>
                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="30.0" prefWidth="100.0" />
-                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" prefWidth="100.0" />
-                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="45.0" prefWidth="100.0" />
+                                              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" percentWidth="70.0" />
                                             </columnConstraints>
                                             <rowConstraints>
                                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -379,7 +378,7 @@
                                                          <children>
                                                             <AnchorPane>
                                                                <children>
-                                                                  <Label layoutX="113.0" layoutY="29.0" text="Наборы свойств:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                                  <Label layoutX="113.0" layoutY="29.0" text="Таблица свойств:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                                      <font>
                                                                         <Font name="System Bold" size="14.0" />
                                                                      </font>
@@ -388,62 +387,21 @@
                                                             </AnchorPane>
                                                             <AnchorPane VBox.vgrow="ALWAYS">
                                                                <children>
-                                                                  <StackPane fx:id="propertiesStackPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-                                                                     <children>
-                                                                        <TreeView fx:id="propertiesTree" onMouseClicked="#handlePropertiesTreeMouseClicked" />
-                                                                     </children>
-                                                                  </StackPane>
-                                                               </children>
-                                                            </AnchorPane>
-                                                            <AnchorPane>
-                                                               <children>
-                                                                  <Label layoutX="113.0" layoutY="37.0" text="Функции:" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
-                                                                     <font>
-                                                                        <Font name="System Bold" size="14.0" />
-                                                                     </font>
-                                                                  </Label>
-                                                               </children>
-                                                            </AnchorPane>
-                                                            <AnchorPane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-                                                               <children>
-                                                                  <TableView fx:id="functionsTable1" onMouseClicked="#handleFunctionsTable1MouseClicked" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0">
-                                                                     <columns>
-                                                                        <TableColumn fx:id="functionsTableTitleColumn1" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="190.0" text="Наименование" />
-                                                                        <TableColumn fx:id="functionsTableSymbolColumn1" maxWidth="75.0" prefWidth="57.0" text="Символ" />
-                                                                     </columns>
-                                                                     <contextMenu>
-                                                                        <ContextMenu fx:id="functionsTable1ContextMenu" />
-                                                                     </contextMenu>
-                                                                  </TableView>
-                                                               </children>
-                                                            </AnchorPane>
-                                                         </children>
-                                                      </VBox>
-                                                   </children>
-                                                </AnchorPane>
-                                                <AnchorPane GridPane.columnIndex="2">
-                                                   <children>
-                                                      <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                                         <children>
-                                                            <AnchorPane VBox.vgrow="ALWAYS">
-                                                               <children>
-                                                                  <TableView fx:id="propertiesTable" editable="true" layoutX="1.0" layoutY="24.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                                  <TableView fx:id="productPropertiesForKindTable" editable="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                                     <columns>
-                                                                      <TableColumn fx:id="propertyTitleColumn" prefWidth="180.0" text="Свойство" />
-                                                                      <TableColumn fx:id="propertyConditionColumn" prefWidth="180.0" text="Условие" />
-                                                                        <TableColumn fx:id="propertyValueColumn" prefWidth="130.0" text="Значение" />
-                                                                        <TableColumn fx:id="propertyMeasureColumn" text="Ед. изм." />
+                                                                      <TableColumn fx:id="productPropertiesForKindTitleColumn" minWidth="300.0" prefWidth="300.0" text="Название" />
+                                                                      <TableColumn fx:id="productPropertiesForKindOptionalColumn" minWidth="300.0" prefWidth="300.0" text="Опция (курсив)" />
+                                                                        <TableColumn fx:id="productPropertiesForKindSymbolColumn" prefWidth="90.0" text="Символ" />
+                                                                        <TableColumn fx:id="productPropertiesForKindValueColumn" minWidth="200.0" prefWidth="200.0" text="Значение" />
                                                                     </columns>
-                                                                     <contextMenu>
-                                                                        <ContextMenu fx:id="propertiesTableContextMenu" />
-                                                                     </contextMenu>
                                                                   </TableView>
                                                                </children>
                                                             </AnchorPane>
-                                                            <AnchorPane prefHeight="200.0" VBox.vgrow="ALWAYS">
+                                                            <AnchorPane prefHeight="325.0" VBox.vgrow="ALWAYS">
                                                                <children>
                                                                   <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-5.0">
                                                                     <columnConstraints>
+                                                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                                                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                                                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                                                     </columnConstraints>
@@ -452,7 +410,7 @@
                                                                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                                                     </rowConstraints>
                                                                      <children>
-                                                                        <AnchorPane GridPane.vgrow="NEVER">
+                                                                        <AnchorPane GridPane.columnIndex="1" GridPane.vgrow="NEVER">
                                                                            <children>
                                                                               <Label layoutX="101.0" layoutY="26.0" text="Описание функции:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                                                  <font>
@@ -461,7 +419,7 @@
                                                                               </Label>
                                                                            </children>
                                                                         </AnchorPane>
-                                                                        <AnchorPane GridPane.columnIndex="1" GridPane.vgrow="NEVER">
+                                                                        <AnchorPane GridPane.columnIndex="2" GridPane.vgrow="NEVER">
                                                                            <children>
                                                                               <Label layoutX="100.0" layoutY="26.0" text="Иллюстрация к функции:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                                                  <font>
@@ -470,12 +428,12 @@
                                                                               </Label>
                                                                            </children>
                                                                         </AnchorPane>
-                                                                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                                                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                                                            <children>
                                                                               <TextArea fx:id="functionDescriptionTextArea" editable="false" layoutX="15.0" layoutY="-66.0" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                                                            </children>
                                                                         </AnchorPane>
-                                                                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                                                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                                                            <children>
                                                                               <GridPane fx:id="functionGridPaneImageView" layoutX="14.0" layoutY="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                                                 <columnConstraints>
@@ -488,6 +446,28 @@
                                                                                     <ImageView fx:id="functionImageView" fitHeight="100.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
                                                                                  </children>
                                                                               </GridPane>
+                                                                           </children>
+                                                                        </AnchorPane>
+                                                                        <AnchorPane>
+                                                                           <children>
+                                                                              <Label layoutX="113.0" layoutY="37.0" text="Функции:" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
+                                                                                 <font>
+                                                                                    <Font name="System Bold" size="14.0" />
+                                                                                 </font>
+                                                                              </Label>
+                                                                           </children>
+                                                                        </AnchorPane>
+                                                                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                                                           <children>
+                                                                              <TableView fx:id="functionsTable1" onMouseClicked="#handleFunctionsTable1MouseClicked" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0">
+                                                                                 <columns>
+                                                                                    <TableColumn fx:id="functionsTableTitleColumn1" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="200.0" text="Наименование" />
+                                                                                    <TableColumn fx:id="functionsTableSymbolColumn1" maxWidth="99.0" prefWidth="95.0" text="Символ" />
+                                                                                 </columns>
+                                                                                 <contextMenu>
+                                                                                    <ContextMenu fx:id="functionsTable1ContextMenu" />
+                                                                                 </contextMenu>
+                                                                              </TableView>
                                                                            </children>
                                                                         </AnchorPane>
                                                                      </children>
