corrected version number of program

--- a/src/main/resources/fxml/PCGUI.fxml
+++ b/src/main/resources/fxml/PCGUI.fxml
@@ -267,11 +267,7 @@
                                                    <children>
                                                       <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                          <children>
-                                                            <AnchorPane>
-                                                               <children>
-                                                                  <Button mnemonicParsing="false" text="Шаблон" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                                               </children>
-                                                            </AnchorPane>
+                                                            <AnchorPane />
                                                             <AnchorPane HBox.hgrow="ALWAYS">
                                                                <children>
                                                                   <ComboBox fx:id="searchComboBox" editable="true" maxWidth="1.7976931348623157E308" onKeyPressed="#handleSearchComboBox" promptText="Введите название товара" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
