--- a/src/main/resources/fxml/PCGUI.fxml
+++ b/src/main/resources/fxml/PCGUI.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" fx:id="anchorPane" minHeight="1024.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.PCGUIController">
+<AnchorPane id="AnchorPane" fx:id="anchorPane" minHeight="960.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.PCGUIController">
    <children>
       <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
@@ -1335,23 +1335,23 @@
                                                 </AnchorPane>
                                                 <AnchorPane minHeight="50.0" prefHeight="50.0" VBox.vgrow="ALWAYS">
                                                    <children>
-                                                      <GridPane minHeight="50.0" prefHeight="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                      <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                         <columnConstraints>
                                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                                         </columnConstraints>
                                                         <rowConstraints>
-                                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                          <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
+                                                            <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                                                         </rowConstraints>
                                                          <children>
-                                                            <AnchorPane prefHeight="100.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="BASELINE" GridPane.vgrow="ALWAYS">
+                                                            <AnchorPane prefHeight="150.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="BASELINE" GridPane.vgrow="ALWAYS">
                                                                <children>
                                                                   <HBox alignment="BASELINE_LEFT" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                                                                      <children>
                                                                         <ComboBox fx:id="tableDBForExportComboBox" minWidth="180.0" onAction="#getSelectedDBTable" prefWidth="180.0" promptText="Экспорт таблицы БД" />
                                                                         <Label alignment="CENTER" minWidth="200.0" text=" в файл формата XLS: " HBox.hgrow="ALWAYS" />
                                                                         <Button fx:id="chooseFileForExportButton" minWidth="140.0" mnemonicParsing="false" onAction="#chooseDirectoryForExport" text="Выбрать папку для экспорта" HBox.hgrow="ALWAYS" />
-                                                                        <AnchorPane minHeight="20.0" HBox.hgrow="ALWAYS">
+                                                                        <AnchorPane HBox.hgrow="ALWAYS">
                                                                            <children>
                                                                               <Label fx:id="fileForExportPathLabel" maxWidth="1.7976931348623157E308" minWidth="150.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0" />
                                                                            </children>
@@ -1392,7 +1392,7 @@
                                              <children>
                                                 <AnchorPane>
                                                    <children>
-                                                      <Label text="Типы устройств" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                      <Label text="Типы устройств" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
                                                          <font>
                                                             <Font name="System Bold" size="20.0" />
                                                          </font>
@@ -1736,13 +1736,13 @@
                                     </AnchorPane>
                                     <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                        <children>
-                                          <VBox layoutX="269.0" layoutY="78.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                          <VBox layoutX="269.0" layoutY="78.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="15.0">
                                              <children>
-                                                <AnchorPane>
+                                                <AnchorPane VBox.vgrow="ALWAYS">
                                                    <children>
-                                                      <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0">
+                                                      <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="10.0">
                                                          <children>
-                                                            <AnchorPane HBox.hgrow="NEVER">
+                                                            <AnchorPane>
                                                                <children>
                                                                   <Label text="Таблица свойств для типа устройств" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                                                                      <font>
@@ -1753,7 +1753,7 @@
                                                             </AnchorPane>
                                                             <AnchorPane HBox.hgrow="ALWAYS">
                                                                <children>
-                                                                  <GridPane nodeOrientation="LEFT_TO_RIGHT" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
+                                                                  <GridPane nodeOrientation="LEFT_TO_RIGHT" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                                                                     <columnConstraints>
                                                                       <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                                                       <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -1764,8 +1764,16 @@
                                                                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                                                     </rowConstraints>
                                                                      <children>
-                                                                        <Button fx:id="addPropertyToTableButton" mnemonicParsing="false" onAction="#addPropertyToTable" text="Добавиь свойство" />
-                                                                        <Button fx:id="deletePropertyFromTableButton" mnemonicParsing="false" onAction="#deletePropertyFromTable" text="Удалить свойство" GridPane.columnIndex="1" />
+                                                                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                                                                           <children>
+                                                                              <Button fx:id="addPropertyToTableButton" mnemonicParsing="false" onAction="#addPropertyToTable" text="Добавиь свойство" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                                           </children>
+                                                                        </AnchorPane>
+                                                                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                                                                           <children>
+                                                                              <Button fx:id="deletePropertyFromTableButton" mnemonicParsing="false" onAction="#deletePropertyFromTable" text="Удалить свойство" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                                           </children>
+                                                                        </AnchorPane>
                                                                         <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2">
                                                                            <children>
                                                                               <Button fx:id="exportPropertiesTableToXlsButton" layoutX="36.0" layoutY="-1.0" mnemonicParsing="false" onAction="#exportPropertiesTableToXls" text="Экспорт в xls" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
@@ -1786,13 +1794,20 @@
                                                 </AnchorPane>
                                                 <AnchorPane VBox.vgrow="ALWAYS">
                                                    <children>
-                                                      <TableView fx:id="productKindPropertiesTable" editable="true" layoutX="51.0" layoutY="14.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0">
+                                                      <TableView fx:id="productKindPropertiesTable" editable="true" layoutX="51.0" layoutY="14.0" style="-fx-background-color: ivory; -fx-border-width: 0;" stylesheets="@../styles/Styles.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                                                         <columns>
-                                                            <TableColumn fx:id="productKindPropertiesOrderColumn" prefWidth="50.0" text="№" />
-                                                          <TableColumn fx:id="productKindPropertiesTitleColumn" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="480.0" text="Название свойства" />
-                                                          <TableColumn fx:id="productKindPropertiesOptionalColumn" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="300.0" text="Опция (курсивом под названием)" />
-                                                            <TableColumn fx:id="productKindPropertiesSymbolColumn" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="100.0" text="Символ" />
+                                                            <TableColumn fx:id="productKindPropertiesOrderColumn" minWidth="50.0" prefWidth="50.0" text="№" />
+                                                          <TableColumn fx:id="productKindPropertiesTitleColumn" maxWidth="1.7976931348623157E308" minWidth="470.0" prefWidth="470.0" text="Название свойства" />
+                                                          <TableColumn fx:id="productKindPropertiesOptionalColumn" maxWidth="1.7976931348623157E308" minWidth="300.0" prefWidth="300.0" text="Опция (курсивом под названием)" />
+                                                            <TableColumn fx:id="productKindPropertiesSymbolColumn" maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="100.0" text="Символ" />
                                                         </columns>
+                                                         <columnResizePolicy>
+                                                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                                         </columnResizePolicy>
+                                                         <styleClass>
+                                                            <String fx:value=".table-row-cell:empty" />
+                                                            <String fx:value=".table-cell" />
+                                                         </styleClass>
                                                       </TableView>
                                                    </children>
                                                 </AnchorPane>
